--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,5 @@ deploy:
   role: "arn:aws:lambda:us-east-2:843380199157:function:cps-translate"
   runtime: "nodejs12.x"
   handler_name: "handler"
+  on:
+    branch: main
